fix search scrollbar

--- a/assets/styles/pages/_search.scss
+++ b/assets/styles/pages/_search.scss
@@ -61,7 +61,7 @@
 
 .search-result--results {
   max-height:200%;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
 
